--- a/TaskOrganizerASD/package.json
+++ b/TaskOrganizerASD/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
+    "firebase": "^9.17.1",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6",
     "vuex": "^4.0.2"
