--- a/TaskOrganizerASD/package.json
+++ b/TaskOrganizerASD/package.json
@@ -12,6 +12,7 @@
     "firebase": "^9.17.1",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6",
+    "vue3-carousel": "^0.3.1",
     "vuedraggable": "^4.1.0",
     "vuex": "^4.0.2"
   },
